--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
   <string name="pln">PLN</string>
   <string name="label_saveCard">SAVE</string>
 
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="your_prayer">Your prayer</string>
+
 </resources>
