--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,8 @@
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="your_prayer">Your prayer</string>
+  <string name="price">Price</string>
+  <string name="intension">Intension</string>
+  <string name="pay">Pay</string>
 
 </resources>
