--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,9 @@
   <string name="email_hint">Email</string>
   <string name="passwd_hint">Password</string>
   <string name="notregistered">Not registered? Sign Up here</string>
-  <string name="registered">Already have an account? Sign in here</string>
+  <string name="registered">…or click here to sign up now!</string>
   <string name="login">Log In</string>
-  <string name="register">Register</string>
-  <string name="title_activity_tesm2">tesm2Activity</string>
+  <string name="register">Sign in</string>
   <!-- Strings used for fragments for navigation -->
   <string name="first_fragment_label">First Fragment</string>
   <string name="second_fragment_label">Second Fragment</string>
@@ -32,5 +31,8 @@
   <string name="price">Price</string>
   <string name="intension">Intension</string>
   <string name="pay">Pay</string>
+  <string name="praise_god">Praise God</string>
+  <string name="quick_offering">Quick offering</string>
+  <string name="custom_offering">Custom offering</string>
 
 </resources>
