--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,12 @@
     <string name="toast_Login">Please log in</string>
     <string name="enter_email">Please enter email</string>
     <string name="enter_password">Please enter password</string>
-    <string name="error_empty">Fields are empty!</string>
     <string name="error_again">Error Try again</string>
-    <string name="error">Error occurred</string>
-    <string name="welcome">Welcome! You are logged in</string>
     <string name="logout">Log out</string>
     <string name="email_hint">Email</string>
     <string name="passwd_hint">Password</string>
-    <string name="notregistered">Not registered? Sign Up here</string>
     <string name="registered">…or click here to sign up now!</string>
-    <string name="login">Log In</string>
     <string name="register">Sign in</string>
-    <string name="title_activity_tesm2">tesm2Activity</string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
@@ -23,11 +17,8 @@
     <string name="label_buy_now">Pay now</string>
     <string name="pln">PLN</string>
     <string name="label_saveCard">SAVE</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="your_prayer">Your prayer</string>
-    <string name="price">Price</string>
     <string name="intention">Intention</string>
-    <string name="pay">Pay</string>
     <string name="mobile_number_explanation">SMS is required on this number</string>
     <string name="payment_confirmation_title">Confirm before purchase</string>
     <string name="card_number">Card number</string>
@@ -53,4 +44,6 @@
     <string name="button_user_form">Profile</string>
     <string name="button_payment">Payment</string>
     <string name="dark_mode">Release Evil</string>
+    <string name="settings">Settings</string>
+    <string name="nav_to_parish">Navigate to parish</string>
 </resources>
